Add link to terms of service on create account form.

--- a/h/templates/auth.html
+++ b/h/templates/auth.html
@@ -150,6 +150,10 @@
     </div>
 
     <div class="form-actions">
+      <div class="form-actions-message">
+        <a href="terms-of-service" target="_blank"
+           >Terms of Service</a>
+      </div>
       <div class="form-actions-buttons">
         <button class="btn" type="submit" name="sign_up"
                 status-button="register">Sign up</button>
