Update Terms of Service micro-copy
By adding some supporting text to the link.

--- a/h/templates/auth.html
+++ b/h/templates/auth.html
@@ -151,8 +151,8 @@
 
     <div class="form-actions">
       <div class="form-actions-message">
-        <a href="terms-of-service" target="_blank"
-           >Terms of Service</a>
+        You are agreeing to be bound by our <a href="terms-of-service" target="_blank"
+           >Terms of Service</a>.
       </div>
       <div class="form-actions-buttons">
         <button class="btn" type="submit" name="sign_up"
