--- a/h/static/styles/inject.scss
+++ b/h/static/styles/inject.scss
@@ -46,7 +46,7 @@ $base-font-size: 14px;
     cursor: pointer;
     height: 100%;
     width: 100%;
-    font-size: 1.2em;
+    font-size: 18px;
     margin: 0;
     padding: 0;
     text-align: center;
