First pass at converting templates to Jinja
Most content is now correctly using Jinja but the rendering in the
sidebar is not working correctly.

--- a/h/templates/header.html
+++ b/h/templates/header.html
@@ -1,7 +1,6 @@
 <header class="masthead">
-  <a href="${base_url}">
-	  <img height="72px" width="72px"
-	       src="${request.static_url('h:static/images/logo.png')}" />
+  <a href="{{ base_url }}">
+    <img height="72" width="72" src="{{ request.static_url('h:static/images/logo.png') }}" />
   </a>
   <hgroup>
     <h1 class="masthead-heading">Hypothes<span class="red">.</span>is</h1>
