--- a/h/templates/app.html
+++ b/h/templates/app.html
@@ -48,7 +48,12 @@
            role="button"
            title="Close"
            ng-click="dialog.visible = false"></i>
-         {% include "blocks.html" %}
+        <div ng-if="persona">
+          {% include_raw "client/account.html" %}
+        </div>
+        <div ng-if="!persona">
+          {% include_raw "client/auth.html" %}
+        </div>
       </div>
     </div>
     <!-- / Dialog -->
@@ -61,22 +66,22 @@
 
 {% block templates %}
   <script type="text/ng-template" id="annotation.html">
-    {% include_raw "annotation.html" %}
+    {% include_raw "client/annotation.html" %}
   </script>
   <script type="text/ng-template" id="markdown.html">
-    {% include_raw "markdown.html" %}
+    {% include_raw "client/markdown.html" %}
   </script>
   <script type="text/ng-template" id="privacy.html">
-    {% include_raw "privacy.html" %}
+    {% include_raw "client/privacy.html" %}
   </script>
   <script type="text/ng-template" id="viewer.html">
-    {% include_raw "viewer.html" %}
+    {% include_raw "client/viewer.html" %}
   </script>
   <script type="text/ng-template" id="thread.html">
-    {% include_raw "thread.html" %}
+    {% include_raw "client/thread.html" %}
   </script>
   <script type="text/ng-template" id="notification.html">
-    {% include_raw "notification.html" %}
+    {% include_raw "client/notification.html" %}
   </script>
 {% endblock %}
 
