--- a/h/templates/bookmarklet.html
+++ b/h/templates/bookmarklet.html
@@ -1,5 +1,7 @@
+{% raw %}
 <a class="bookmarklet"
    title="Drag this to your bookmarks"
+   onclick="alert('Drag this to your bookmarks bar first');return false"
    href="javascript:(function() {
            var ssl = !!document.location.protocol.match(/^https:/)
            , embedUrl = '${request.resource_url(context, 'embed.js')}'
@@ -18,4 +20,4 @@
              document.body.appendChild(embed);
            }
            })();"><i class="h-icon-move"></i> Annotate</a>
-
+{% endraw %}
