--- a/h/templates/base.html
+++ b/h/templates/base.html
@@ -22,7 +22,7 @@
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    {% block head %}{% endblock %}
+    {% block styles %}{% endblock %}
 
     {% if base_url %}
       <base target="_top" href="{{ base_url }}" />
