Ensure embed.js is rendered correctly
Now using js rather than txt as the file extension as it provides
a clearer indication as to the contents of the file. The fact it's in
the templates folder should be enough to indicate it needs processing.

--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -156,7 +156,7 @@
       function hypothesisConfig() { return {firstRun: true} }
     </script>
     <script defer>
-      {% include "embed.txt" %}
+      {% include "embed.js" %}
     </script>
   {% endif %}
 {% endblock %}
