Move includes into their own directory

--- a/h/templates/auth.html
+++ b/h/templates/auth.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div id="auth" class="content paper ng-cloak">
-    {% include "header.html" %}
+    {% include "includes/header.html" %}
     <main ng-view></main>
   </div>
 {% endblock %}
