--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "layouts/base.html" %}
 {% block content %}
   <div class="help-page">
     <div class="help-page-content masthead-small">
