--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -95,6 +95,11 @@ $threadexp-width: .6em;
   margin-bottom: .8em;
 }
 
+.thread-deleted {
+  margin-top: .8em;
+  margin-bottom: 2.8em;
+}
+
 .thread-reply {
   margin-top: -2.153em;
   margin-bottom: .8em;
