Regular update of annotation timestamps
The annotation directive uses the timeHelpers service to get
the fuzzyTimeString and the next time to update.

It wraps the updating with the render service to avoid
the UI update to be flickery and only update when necessary

Fix #1615

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -37,7 +37,7 @@
      title="{{vm.annotation.update | moment:'LLLL'}}"
      ng-if="!vm.editing && vm.annotation.updated"
      ng-href="{{baseURI}}a/{{vm.annotation.id}}"
-     >{{vm.annotation.updated | fuzzyTime | date : mediumDate}}</a>
+     >{{timestamp}}</a>
 </header>
 
 <!-- Excerpts -->
