Use a meta tag to signify a first run
This allows the page to notify the chrome extension via an "intent"
meta tag that the sidebar should launch in first run mode.

--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -1,4 +1,12 @@
 {% extends "layouts/base.html" %}
+
+{% block meta %}
+  {{ super() }}
+  {% if is_onboarding %}
+    <meta name="hypothesis-intent" content="first-run" />
+  {% endif %}
+{% endblock %}
+
 {% block content %}
   <div class="help-page">
     <div class="help-page-content masthead-small">
