--- a/h/templates/layouts/base.html
+++ b/h/templates/layouts/base.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    {% for name, content in layout.meta_attrs %}
-      <meta name="{{ name }}" content="{{ content }}" />
-    {% endfor %}
+    {% block meta %}
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+      <meta name="viewport" content="width=device-width,initial-scale=1" />
+      {% for name, content in layout.meta_attrs %}
+        <meta name="{{ name }}" content="{{ content }}" />
+      {% endfor %}
+    {% endblock %}
 
     <title>{% block title %}Hypothes.is{% endblock %}</title>
 
