Regression - Update bookmarklet.html into jinja
This file had a chameleon template fragment, tried to access variable
request.resource_url(), but it was set to be a raw template, which
caused exception when trying to use it.

The raw indicator is removed and jinja template style is used.

Fix #1649

--- a/h/templates/includes/bookmarklet.html
+++ b/h/templates/includes/bookmarklet.html
@@ -1,10 +1,9 @@
-{% raw %}
 <a class="bookmarklet"
    title="Drag this to your bookmarks"
    onclick="alert('Drag this to your bookmarks bar first');return false"
    href="javascript:(function() {
            var ssl = !!document.location.protocol.match(/^https:/)
-           , embedUrl = '${request.resource_url(context, 'embed.js')}'
+           , embedUrl = '{{request.resource_url(context, 'embed.js')}}'
            ;
 
            if (ssl && !embedUrl.match(/^https:/)) {
@@ -20,4 +19,3 @@
              document.body.appendChild(embed);
            }
            })();"><i class="h-icon-move"></i> Annotate</a>
-{% endraw %}
