Apply Jinja templates and flaskless Annotation calls

--- a/h/notification/templates/document_owner_notification.html
+++ b/h/notification/templates/document_owner_notification.html
@@ -1,13 +1,13 @@
-<p>> ${selection}
+<p>> {{ selection }}
 
-${text}
-${tags}
+{{ text }}
+{{ tags }}
 
 
 From:
-  ${user}
-  ${user_profile}
-On ${timestamp} at (${path})
+  {{ user }}
+  {{ user_profile }}
+On {{ timestamp }} at ({{ path }})
 About ${document_path}
 --
 This is an annotation on your document from Hypothes.is / Annotator (URL here)</p>
