--- a/h/templates/layouts/base.html
+++ b/h/templates/layouts/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     {% for name, content in layout.meta_attrs %}
-      <meta name="" content="{{ value }}" />
+      <meta name="{{ name }}" content="{{ content }}" />
     {% endfor %}
 
     <title>{% block title %}Hypothes.is{% endblock %}</title>
