Show form wide responses only when message exists
The $error key for the form will have an Array of the errors of its
fields for that key. That means that a bad password response causes
the entire login form to have a truthy $error.response value. That's
not wrong, and we could be using it to show all the errors in a block
at the top of the form, but it's not how we want to use it for this
case.

--- a/h/templates/client/auth.html
+++ b/h/templates/client/auth.html
@@ -13,7 +13,7 @@
         novalidate>
 
     <p class="form-description form-error"
-       ng-show="login.$error.response">
+       ng-show="login.responseErrorMessage">
       {{login.responseErrorMessage}}
     </p>
 
@@ -74,7 +74,7 @@
         novalidate>
 
     <p class="form-description form-error"
-       ng-show="register.$error.response">
+       ng-show="register.responseErrorMessage">
       {{register.responseErrorMessage}}
     </p>
 
@@ -172,7 +172,7 @@
         novalidate>
 
     <p class="form-description form-error"
-       ng-show="forgot_password.$error.response">
+       ng-show="forgot_password.responseErrorMessage">
       {{forgot_passwordresponseErrorMessage}}
     </p>
     <div class="form-field">
@@ -212,7 +212,7 @@
         novalidate>
 
     <p class="form-description form-error"
-       ng-show="reset_password.$error.response">
+       ng-show="reset_password.responseErrorMessage">
       {{reset_password.responseErrorMessage}}
     </p>
 
