Simplify/improve the visual diff
 * Move the calculations to the render funcion
 * Stop automatically `$sce.trust()`-ing the HTML code.
   (So now `$sanitize` is invoked automatically.)
   This also removes the need to use the `$sce` module,
   or to set the `trustedDIffHTML` flag, simplifying the code.
 * Use the `objectEquality` flag when `$watch()`ing the targets,
   so that we pick up changes in both the number and the contents
   of the targets

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -50,10 +50,10 @@
                          | filter : {'type': 'TextQuoteSelector'}
                          track by $index"></blockquote>
   <blockquote class="annotation-quote"
-	      ng-bind-html="target.trustedDiffHTML"
+	      ng-bind-html="target.diffHTML"
 	      ng-show="target.showDiff"></blockquote>
   <div class="small pull-right"
-       ng-show="target.trustedDiffHTML">
+       ng-show="target.diffHTML">
     <input type="checkbox"
 	   ng-model="target.showDiff"
 	   ng-click="$event.stopPropagation()"> Show differences</input>
