--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -44,22 +44,22 @@
 <section class="annotation-target"
          ng-repeat="target in vm.annotation.target track by $index">
   <blockquote class="annotation-quote"
-              ng-hide="target.showDiff"
+              ng-hide="vm.showDiff"
               ng-bind-html="selector.exact"
               ng-repeat="selector in target.selector
                          | filter : {'type': 'TextQuoteSelector'}
                          track by $index"></blockquote>
   <blockquote class="annotation-quote"
 	      ng-bind-html="target.diffHTML"
-	      ng-show="target.showDiff"></blockquote>
-  <div class="small pull-right"
-       ng-show="target.diffHTML">
-    <input type="checkbox"
-	   ng-model="target.showDiff"
-	   ng-click="$event.stopPropagation()"> Show differences</input>
-  </div>
-
+	      ng-show="vm.showDiff"></blockquote>
 </section>
+<div class="small pull-right"
+     ng-show="vm.hasDiff">
+  <input type="checkbox"
+         ng-model="vm.showDiff"
+         ng-click="$event.stopPropagation()"> Show differences</input>
+</div>
+
 <!-- / Excerpts -- >
 
 <!-- Body -->
