Restore feature to scroll for annotations
Clicking on an annotation card will bring (one of the) highlights
belonging to that annotation into the view in the document.

--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -39,6 +39,7 @@
       thread-collapsed="!search.query"
       ng-include="'thread.html'"
       ng-mouseenter="activate(child.message)"
+      ng-click="scrollto(child.message)""
       ng-mouseleave="activate()"
       ng-repeat="child in vm.container.children | orderBy : sort.predicate"
       ng-show="vm.container && shouldShowThread(child) &&
