--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -59,6 +59,11 @@
   font-size: .923em;
 }
 
+.show-differences {
+  border-left: 3px solid #D3D3D3;
+  padding: 0.3em 0.615em;
+}
+
 
 //PRIVACY CONTROL////////////////////////////
 privacy {
