Sticky privacy on the browser
- The permission plugin no longer sets the permissions
- Read permission is a one-item list ["group:__world__"] instead of ["group:__world__", <username>"]
- Privacy directive moved to directives/privacy.coffee
- Uses the simple localStorage solution inside the privacy directive.

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -25,6 +25,8 @@
       <privacy ng-click="$event.stopPropagation()"
                ng-if="vm.annotation.permissions && vm.editing && action != 'delete'"
                ng-model="vm.annotation.permissions"
+               user="{{vm.annotation.user}}"
+               privacy-default="{{!vm.annotation.references && !vm.annotation.id}}"
                class="dropdown privacy pull-right"
                name="privacy" />
     </aside>
