Re-implement focusing annotation cards
... when hovering over the highlights in the document,
or over the annotation cards themselves.

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -6,9 +6,11 @@ $threadexp-width: .6em;
     margin-bottom: .72em;
   }
 
+  li.thread:hover,
   .card-emphasis {
-    box-shadow: 6px 6px 8px -2px $gray-light;
+    box-shadow: 4px 4px 4px -2px $gray-light;
   }
+
 }
 
 .thread-list {
