--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -38,9 +38,9 @@
       thread="child" thread-filter
       thread-collapsed="!search.query"
       ng-include="'thread.html'"
-      ng-mouseenter="activate(child.message)"
+      ng-mouseenter="focus(child.message)"
       ng-click="scrollTo(child.message)""
-      ng-mouseleave="activate()"
+      ng-mouseleave="focus()"
       ng-repeat="child in vm.container.children | orderBy : sort.predicate"
       ng-show="vm.container && shouldShowThread(child) &&
                (count('edit') || count('match') || !threadFilter.active())">
