Don't focus on replies in hover

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -6,11 +6,10 @@ $threadexp-width: .6em;
     margin-bottom: .72em;
   }
 
-  li.thread:hover,
+  & > li.thread:hover,
   .card-emphasis {
     box-shadow: 4px 4px 4px -2px $gray-light;
   }
-
 }
 
 .thread-list {
