Add missing values to the HTML reply template

--- a/h/notification/templates/reply_notification.html
+++ b/h/notification/templates/reply_notification.html
@@ -9,4 +9,8 @@
 
 <blockquote>&ldquo;{{ reply_text }}&rdquo;</blockquote>
 
-<p><a href="">Reply to {{ reply_user }}</a>.</p>
+<p><a href="{{ reply_user_profile }}">Reply to {{ reply_user }}</a>.</p>
+
+<hr/>
+<p><small>If you&rsquo;d rather not recieve these notifications you can
+    <a href="{{ unsubscribe }}">unsubscribe now</a>.</small></p>
