Focusing: identify annotations by tag, instead of ID
... because new and deleted annotations don't have IDs,
only tags, assigned by the bridge.

--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -34,7 +34,7 @@
     </span>
   </li>
   <li class="paper thread"
-      ng-class="{'card-emphasis': focusedAnnotations[child.message.id]}"
+      ng-class="{'card-emphasis': focusedAnnotations[child.message.$$tag]}"
       deep-count="count"
       thread="child" thread-filter
       thread-collapsed="!search.query"
