--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -34,7 +34,7 @@
     </span>
   </li>
   <li class="paper thread"
-      ng-class="{'card-emphasis': focusedAnnotations[child.message.$$tag]}"
+      ng-class="{'card-emphasis': isFocused(child.message)}"
       deep-count="count"
       thread="child" thread-filter
       thread-collapsed="!search.query"
