Use js-hover instead of card-emphasis

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -7,7 +7,7 @@ $threadexp-width: .6em;
   }
 
   & > li.thread:hover,
-  .card-emphasis {
+  & > li.thread.js-hover {
     @include focus-outline;
   }
 }
