--- a/h/static/styles/base.scss
+++ b/h/static/styles/base.scss
@@ -55,13 +55,10 @@ $negative: #d11c2b;
 $neutral: #0171ba;
 
 //OTHER VARIABLES
-$highlight-color: rgba(192, 236, 253, 0.5);
-$highlight-color-second: rgba(181, 234, 255, 0.8);
-$highlight-color-third: rgba(149, 224, 253, 0.8);
-$highlight-mode-color: rgba(255, 255, 60, 0.3);
-$highlight-mode-color-second: rgba(206, 206, 60, 0.4);
-$highlight-mode-color-third: rgba(192, 192, 49, 0.4);
-$highlight-mode-active-color: rgba(255, 255, 60, 0.7);
+$highlight-color: rgba(255, 255, 60, 0.3);
+$highlight-color-second: rgba(206, 206, 60, 0.4);
+$highlight-color-third: rgba(192, 192, 49, 0.4);
+$highlight-color-focus: rgba(192, 236, 253, 0.5);
 $score-width: 40px;
 $score-height: $score-width;
 $heatmap-width: 22px;
