Standardise on "Hypothesis" for the name of the software
As discussed, we're going to use Hypothesis in textual references to our
software.

I haven't changed instances of "Hypothes.is" where they refer to the
legal entity.

--- a/h/templates/layouts/base.html
+++ b/h/templates/layouts/base.html
@@ -10,7 +10,7 @@
       {% endfor %}
     {% endblock %}
 
-    <title>{% block title %}Hypothes.is{% endblock %}</title>
+    <title>{% block title %}Hypothesis{% endblock %}</title>
 
     {% for rel, href in layout.link_attrs %}
       <link rel="{{ rel }}" href="{{ href }}" />
