--- a/h/templates/pattern_library.html
+++ b/h/templates/pattern_library.html
@@ -692,7 +692,7 @@
               </fuzzytime>
             </header>
             <section class="">
-              <blockquote class="annotation-quote">Hypothes.is is an open source effort licensed under a 2-Clause BSD License, sometimes referred to as the "Simplified BSD License" or the "FreeBSD License".</blockquote>
+              <blockquote class="annotation-quote">Hypothesis is an open source effort licensed under a 2-Clause BSD License, sometimes referred to as the "Simplified BSD License" or the "FreeBSD License".</blockquote>
             </section>
             <section name="text" markdown="" class="" readonly="readonly">
               <textarea class="form-input form-textarea ng-hide"></textarea>
@@ -752,7 +752,7 @@
               </fuzzytime>
             </header>
             <section class="">
-              <blockquote class="annotation-quote">Hypothes.is is an open source effort licensed under a 2-Clause BSD License, sometimes referred to as the "Simplified BSD License" or the "FreeBSD License".</blockquote>
+              <blockquote class="annotation-quote">Hypothesis is an open source effort licensed under a 2-Clause BSD License, sometimes referred to as the "Simplified BSD License" or the "FreeBSD License".</blockquote>
             </section>
             <section name="text" markdown="" class="" readonly="readonly">
               <textarea class="form-input form-textarea ng-hide"></textarea>
