--- a/h/templates/help.html
+++ b/h/templates/help.html
@@ -118,7 +118,7 @@
         <section class="help-page-section">
           <h2 id="contributing" class="help-page-heading">Contributing</h2>
           <div class="styled-text">
-            <p>Hypothes.is is an open source effort licensed under a 2-Clause <a
+            <p>Hypothesis is an open source effort licensed under a 2-Clause <a
                 href="https://en.wikipedia.org/wiki/BSD_licenses">BSD License</a>,
               sometimes referred to as the "Simplified BSD License" or the "FreeBSD
               License".</p>
