--- a/h/static/styles/topbar.scss
+++ b/h/static/styles/topbar.scss
@@ -55,7 +55,7 @@ body {
       font-family: $sans-font-family;
     }
 
-    & > * {
+    & > *:first-child, & > *:last-child {
       line-height: 28px;
       margin: 0 .72em;
     }
