--- a/h/templates/client/privacy.html
+++ b/h/templates/client/privacy.html
@@ -3,15 +3,16 @@
         role="button"
         class="dropdown-toggle"
         data-toggle="dropdown">
-        <i class="small" ng-class="{'h-icon-earth': level == 'Public', 'h-icon-locked': level == 'Only Me'}"></i>
-        {{level}}
+        <i class="small" ng-class="{'h-icon-earth': level.name == 'public',
+                                    'h-icon-locked': level.name == 'private'}"></i>
+        {{level.text}}
         <i class="h-icon-triangle"></i>
   </span>
   <ul class="dropdown-menu" role="menu">
-    <li ng-repeat="p in levels" ng-click="setLevel(p)">
-      <i class="small" ng-class="{'h-icon-earth': p == 'Public',
-                                  'h-icon-locked': p == 'Only Me'}"></i>
-      {{p}}
+    <li ng-repeat="level in levels" ng-click="setLevel(level)">
+      <i class="small" ng-class="{'h-icon-earth': level.name == 'public',
+                                  'h-icon-locked': level.name == 'private'}"></i>
+      {{level.text}}
     </li>
   </ul>
 </div>
