Revert "Show privacy dropdown even on empty permissions"
This reverts commit eb3c486991d921a1f2342a289cb9755d9d76459e.

I don't think this fixed anything because the permissions plugin
should still have been setting the permissions to empty.

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -23,7 +23,7 @@
     <!-- Editing controls -->
     <aside class="pull-right" ng-if="vm.editing">
       <privacy ng-click="$event.stopPropagation()"
-               ng-if="vm.editing && action != 'delete'"
+               ng-if="vm.annotation.permissions && vm.editing && action != 'delete'"
                ng-model="vm.annotation.permissions"
                user="{{vm.annotation.user}}"
                class="dropdown privacy pull-right"
