--- a/h/templates/client/account.html
+++ b/h/templates/client/account.html
@@ -74,7 +74,7 @@
   </div>
   <div class="tab-pane" title="Notifications">
     <form class="account-form form" name="notificationsForm">
-      <p class="form-description">Recieve notification emails for:</p>
+      <p class="form-description">Receive notification emails for:</p>
       <div class="form-field form-checkbox-list">
         <div class="form-checkbox-item" ng-repeat="subscription in subscriptions">
           <input id="checkbox-{{$index}}" type="checkbox" ng-model="subscription.active" ng-change="updated($index, notificationsForm)" />
