Rename Heatmap -> BucketBar
Ref #1236

--- a/h/static/styles/base.scss
+++ b/h/static/styles/base.scss
@@ -55,13 +55,13 @@ $negative: #d11c2b;
 $neutral: #0171ba;
 
 //OTHER VARIABLES
+$bucket-bar-width: 22px;
 $highlight-color: rgba(255, 255, 60, 0.3);
 $highlight-color-second: rgba(206, 206, 60, 0.4);
 $highlight-color-third: rgba(192, 192, 49, 0.4);
 $highlight-color-focus: rgba(192, 236, 253, 0.5);
 $score-width: 40px;
 $score-height: $score-width;
-$heatmap-width: 22px;
 $input-border-radius: 2px;
 
 /* Style input placeholders */
